[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "calvd"
version = "0.1"
description = "Conversion of resistance values to temperatures for RTDs by Callendar van Dusen equation"
readme = "README.rst"
license = {file = "LICENSE"}
authors = [
    {name = "Gunnstein T. Frøseth", email = "gunnstein@mailbox.org"},
]
classifiers = [
    "License :: OSI Approved :: ISC License (ISCL)",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "numpy",
]

[project.urls]
repository = "https://github.com/gunnstein/calvd"

[tool.setuptools]
packages = ["calvd"]