[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "caldus"
version = "1.3"
description = "Conversion of resistance values to temperatures for platinum resistors such as RTDs"
readme = "README.rst"
license = {file = "LICENSE"}
authors = [
    {name = "Gunnstein T. Frøseth", email = "gunnstein@mailbox.org"},
]
classifiers = [
    "License :: OSI Approved :: ISC License (ISCL)",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "numpy",
]

[project.urls]
repository = "https://github.com/gunnstein/caldus"

[tool.setuptools]
packages = ["caldus"]
